@@ -216,6 +216,7 @@ let settings = {
     libraryUrls: function(value) { return this.charSettingParameter("kiwix.libraryUrls", value); },
     downloads: function(value) { return this.charSettingParameter("kiwix.downloads", value); },
     zoomFactor: function(id, zoomFactor) { return this.charSettingParameter("kiwix.zoomFactor." + id, zoomFactor); },   
+    defaultBookmarksPath: function(value) { return this.charSettingParameter("defaultBookmarksPath", value); },   
     isHighDPI: function(value) { return this.boolSettingParameter("kiwix.isHighDPI", value); },
     displayOnCloseCleanConfirmDialog: function(value) { 
     	return this.boolSettingParameter("displayOnCloseCleanConfirmDialog", value); 
