@@ -36,6 +36,7 @@ Kiwix 0.9 rc2
 * NEW: if "/M/Description" empty, check "/M/Subtitle" (used by Mediawiki Collection ext.)
 * NEW: Windows compilation using Visual Studio 2010
 * NEW: kiwix-serve (HTTP server) for MS/Windows (#140)
+* NEW: Save the current bookmark set over sessions
 
 Kiwix 0.9 rc1
 * FIXED: Smoothier zooming (ID: 3469927)
